# polars-greeks

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
crates/rust-core/: Cargo.toml
crates/rust-py-bindings/: Cargo.toml  INSTALL.md  pyproject.toml
crates/rust-py-bindings/polars_greeks/: __init__.py  extension.py  functions.py  greeks.py
crates/rust-py-bindings/src/: lib.rs  polars_greeks.rs
crates/rust-py-bindings/tests/: test_greeks.py  test_performance.py
