[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polars-greeks"
version = "0.1.0" 
description = "High-performance Greeks calculation plugin for Polars"
authors = [
    {name = "derek.jiao", email = "derek.jiao@signalplus.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "polars>=0.20.0",
]

[tool.maturin]
module-name = "polars_greeks._internal"
